<resources>
    <string name="app_name">Prodest</string>
    <string name="title_activity_login">Prodest</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Logue-se ou Cadastre-se</string>
    <string name="action_sign_in_short">Logar-se</string>
    <string name="error_invalid_email">Esse endereço de email é inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Esse campo é requirido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_nro_pedido">Número Pedido</string>
    <string name="hint_email">Email</string>
    <string name="hint_cnpj">CNPJ</string>
    <string name="hint_cpf">CPF/CNPJ</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_cep">Cep</string>
    <string name="hint_nro">Nro.</string>
    <string name="hint_nropedido">Número do Pedido</string>
    <string name="hint_qtde">Quantidade do Produto</string>
    <string name="hint_cliente">Cliente</string>
    <string name="hint_valor_total">Valor Total</string>
    <string name="hint_preco">Preço do Produto</string>
    <string name="hint_usuario">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirme a senha</string>
    <string name="hint_tipo_pessoa">Tipo Pessoa</string>
    <string name="hint_produto">Produto</string>
    <string name="hint_produto_descricao">Descrição</string>
    <string name="hint_produto_qtde">Quantidade</string>
    <string name="hint_produto_preco">Preço</string>
    <string name="hint_uf">UF</string>
    <string name="hint_spinner_cliente">Selecione um Cliente</string>
    <string name="hint_spinner_produto">Selecione um Produto</string>
    <string name="hint_spinner_pais">Selecione um País</string>
    <string name="hint_spinner_uf">Selecione uma UF</string>
    <string name="hint_pesquisa">Pesquisar</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrar</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="btn_adicionar">Adicionar Produto</string>
    <string name="btn_salvar_pedido">Salvar Pedido</string>
    <string name="btn_cancela">Cancelar</string>
    <string name="error_message_name">Digite seu Nome Completo</string>
    <string name="error_message_user">Digite um Usuário Válido</string>
    <string name="error_message_email">Digite um Email Válido</string>
    <string name="error_message_password">Digite a Senha</string>
    <string name="error_message_cpf">Digite seu CPF/CNPJ completo</string>
    <string name="error_message_cidade">Digite a Cidade</string>
    <string name="success_message">Registro inserido com sucesso</string>
    <string name="error_delete_message">Não é possível excluir o cliente, já existem pedidos para ele.</string>
    <string name="message_builder">O GPS do dispositivo parece estar desabilitado, deseja abilita-lo?</string>
    <string name="pedido_item_inserido">Item adicionado com sucesso ao pedido</string>
    <string name="text_not_member">Ainda não tem uma conta? Crie uma</string>
    <string name="text_already_member">Já é um membro? Faça o Login</string>
    <string name="error_email_exists">O Email já está cadastrado</string>
    <string name="error_user_exists">O Usuário já está cadastrado</string>
    <string name="error_password_match">As senhas não correspondem</string>
    <string name="error_valid_email_password">Usuário e/ou Senha inválidos</string>
    <string name="action_logout">Logout</string>
    <string name="text_localizacao">Pegar localização atual</string>
    <string name="text_add_item">Adicionar Novo Item</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="pie_chart_clientes">"Gráfico de Pedidos por Clientes"</string>
    <string name="pie_chart_produtos">"Gráfico de Produtos em Pedidos"</string>
    <string name="radio_button_fnavigation_drawer_socmedisica">Física</string>
    <string name="radio_button_juridica">Jurídica</string>
    <string name="radio_button_fisica">Física</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_clientes">Clientes</string>
    <string name="navigation_drawer_pedidos">Pedidos</string>
    <string name="navigation_drawer_sincronizar">Sincronizar</string>
    <string name="prompt_paises">País</string>
    <string name="prompt_clientes">Clientes</string>
    <string name="prompt_uf">País</string>
</resources>