<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:weightSum="3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtxtNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hint_nome" />

        <RadioGroup
            android:id="@+id/rdgTipoPessoa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:checkedButton="@id/rdbFisica">

            <RadioButton
                android:id="@+id/rdbFisica"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_fisica" />

            <RadioButton
                android:id="@+id/rdbJuridica"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_juridica" />

        </RadioGroup>

        <EditText
            android:id="@+id/edtxtCnpj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hint_cpf" />

        <Spinner
            android:id="@+id/spnPais"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/array_paises"
            android:prompt="@string/prompt_paises"/>

        <Spinner
            android:id="@+id/spnUF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/array_uf"
            android:prompt="@string/prompt_uf"/>

        <EditText
            android:id="@+id/edtxtCidade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hint_cidade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtxtCep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/hint_cep" />

            <EditText
                android:id="@+id/edtxtNro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="number"
                android:text="@string/hint_nro" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>
