<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_top_cadastro_cliente"
    android:background="@color/colorBackground"
    android:weightSum="4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtxtNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="60"
            android:inputType="textCapSentences"
            android:hint="@string/hint_nome" />

        <RadioGroup
            android:id="@+id/rdgTipoPessoa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rdbFisica"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_button_fisica" />

            <RadioButton
                android:id="@+id/rdbJuridica"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_button_juridica" />

        </RadioGroup>

        <EditText
            android:id="@+id/edtxtCnpj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="15"
            android:inputType="textCapSentences"
            android:hint="@string/hint_cpf" />

        <ImageButton
            android:id="@+id/btnGPS"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBackground"
            app:srcCompat="@drawable/ic_my_location_black" />

        <Spinner
            android:id="@+id/spnPais"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/array_paises"
            android:prompt="@string/prompt_paises"/>

        <Spinner
            android:id="@+id/spnUF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/array_uf"
            android:prompt="@string/prompt_uf"/>

        <EditText
            android:id="@+id/edtxtCidade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="60"
            android:inputType="textCapSentences"
            android:hint="@string/hint_cidade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtxtCep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/hint_cep"
                android:inputType="number" />

            <EditText
                android:id="@+id/edtxtNro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:maxLength="6"
                android:inputType="number"
                android:hint="@string/hint_nro" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:paddingRight="@dimen/padding_rigth_cadastro_cliente"
        android:paddingLeft="@dimen/padding_left_cadastro_cliente"
        android:paddingBottom="@dimen/padding_bottom_cadastro_cliente"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTextHint"
            android:text="@string/btn_cadastro" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTextHint"
            android:text="@string/btn_cancela" />
    </LinearLayout>

</LinearLayout>
