<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/navigation_drawer_clientes" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_pedidos"/>
        <item
            android:id="@+id/nav_sincronizar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_sincronizar"/>
        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>


</menu>
